<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Penn StudySpaces</string>
    <string name="main_no_items">No rooms available</string>
    <string name="search_button">Search</string>
    <string name="private_check_box">Private</string>
    <string name="whiteboard_check_box">Whiteboard</string>
    <string name="computer_check_box">Computer</string>
    <string name="projector_check_box">Projector</string>
    <string name="reservable_check_box">Reservable</string>
    <string name="map">Map</string>
    <string name="details">Details</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="remove_favorites">Unfavorite</string>
    <string name="your_favorite">This is your favorite StudySpace</string>
    <string name="add_calendar">Add to Calendar</string>
    <string name="add_reserve">Reserve Online</string>
    <string name="add_text">Notify friends</string>
    <string name="favorites_button">Favorites</string>
    <string name="mapviewbtn">MapView</string>
    <string name="Edit">Edit</string>
    <string name="mapview_button">MapView</string>
    <string name="view_group">View Groups</string>
    <string name="title_activity_group_memebers">Members in the Group</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_group_button">Create Group</string>
    <string name="add_member">Add Member</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="notify_button">Notify</string>
    <string name="calendar_and_reminder">Calendar+Reminder</string>
    <string name="title_activity_notify_selected_groups">Select Groups To Notify</string>
    
    <string name="search_screen_help">The filter page allows you to filter study spaces based on your requirements.

You can select from a variety of utilities and also filter across Penn schools.

The star in the top right corner will let you go directly to your favorite places. The Find Now button will bring you to the closest study space matching your selection criteria.

You also have the opportunity to specify the minimum number of people in your group, and only view the reservable rooms.

For more details, just click the ? at the bottom left corner, and it will bring you to the help screen!

Enjoy!

</string>

   <string name="main_screen_help">The main screen displays all available spaces based on the filter parameters as described above.

By default, all the study spaces are ranked by their distance from your current place.

The label on the left indicates whether the study space is classified as Engineering, Library, Wharton or Others.

The icons on the right show whether the study space is private, has whiteboards, computers or projectors.

If you click and hold on a study space in the list, a dialog appears allowing you to reserve a space directly. 

There is also a favorites tab that displays any spaces you have selected as favorites.

Last but not least, through the MapView, you could see all the study spaces in the list on the map.

</string>

   <string name="icon_help">Students can reserve the study space privately.\n\n
The study space has a whiteboard.\n\n
The study space has a projector with a large screen.\n\n
The study space has computers.
</string>

   <string name="study_space_info_help">Each study space has its own page, with information regarding utilities and availability.
       You also have the option of adding to calendar and notifying your friends via text messages or email for each of the spaces.
       </string>
       
   <string name="map_screen_help">The map tab allows you to see the location of your selected space in relation to your current space. 
            Tapping on an icon allows you to see the space address.
   </string>

</resources>