<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue"
        android:minHeight="500dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/spacename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/roomtype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgrey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/roomnumbers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/WhiteSmoke"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxoccupancy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/WhiteSmoke" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/private_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/whiteboard_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/computer_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/projector_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/reservetype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/WhiteSmoke" />
        </LinearLayout>

        <TextView
            android:id="@+id/availablenow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="AVAILABLE NOW"
            android:textColor="#0099CC"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/fbutton"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onFavClick"
            android:padding="10dp"
            android:text="@string/add_favorites"
            android:textColor="@color/WhiteSmoke"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/unfavorite"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/yourFavStudySpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/your_favorite"
                android:textColor="@color/WhiteSmoke"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/unfavoriteText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/unfavbutton"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onRemoveFavClick"
                android:padding="10dp"
                android:text="@string/remove_favorites"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addCal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <CheckBox
                android:id="@+id/calTextCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textSize="20sp"
                android:textColor="@color/WhiteSmoke" />

            <TextView
                android:id="@+id/addCalenderText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/addcalenderbtn"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onCalClick"
                android:padding="10dp"
                android:text="@string/add_calendar"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/calCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar_and_reminder"
                android:layout_marginLeft="30dip"
                android:textColor="@color/WhiteSmoke"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reserve"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp" >

            <CheckBox
                android:id="@+id/notifyFriendsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textSize="20sp"
                android:textColor="@color/WhiteSmoke" />

            <TextView
                android:id="@+id/reserveOnline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reservebtn"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onReserveClick"
                android:padding="10dp"
                android:text="@string/add_reserve"
                android:textColor="@color/lightgrey"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>