<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="500dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Help:"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/voiceHelpButton"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:text="Voice Help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Search Screen"
            android:textColor="@color/lightblue"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_screen_help"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/search_screen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Main screen"
            android:textColor="@color/lightblue"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_screen_help"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/main_scene" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Icon Information"
            android:textColor="@color/lightblue"
            android:textSize="24sp" />
        

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/icons_all" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/icon_help"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Study Space information"
            android:textColor="@color/lightblue"
            android:textSize="24sp" />
      

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/study_space_info_help"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/space_detail" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Map Screen"
            android:textColor="@color/lightblue"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/map_screen_help"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>