<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue"
        android:orientation="vertical"
        android:padding="20dip"
        android:scaleType="fitXY" >

        <TextView
            android:id="@+id/roomForText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Room for (no of people):"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/numberOfPeopleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_marginTop="8dip"
                android:layout_weight="1"
                android:text=""
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/numberOfPeopleSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="2"
                android:max="19"
                android:progress="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/meetingDateText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="15dip"
            android:text="Meeting date:"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="2dip"
                android:layout_weight="3"
                android:text=""
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/pickDate"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/cal" />
        </LinearLayout>

        <TextView
            android:id="@+id/meetingTimeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="15dip"
            android:text="Meeting time:"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/startTimeText"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_weight="1"
                android:gravity="left"
                android:text="Start: "
                android:textSize="22dp" />

            <TextView
                android:id="@+id/startTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text=""
                android:textSize="18sp" />

            <!--
                 <Button
                android:id="@+id/pickStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dip"
                android:text="@string/Edit" />
            -->

            <ImageButton
                android:id="@+id/pickStartTime"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:src="@drawable/clock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/endTimeText"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_weight="0.99"
                android:gravity="left"
                android:text="End: "
                android:textSize="22sp" />

            <TextView
                android:id="@+id/endTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text=""
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/pickEndTime"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:src="@drawable/clock" />

            <!--
                 <Button
                android:id="@+id/pickEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dip"
                android:text="@string/Edit" />
            -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingTop="20dip" >

                <CheckBox
                    android:id="@+id/privateCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_check_box"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/whiteboardCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whiteboard_check_box"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/computerCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/computer_check_box"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/projectorCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projector_check_box"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/reservableCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservable_check_box"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dip" >

                    <CheckBox
                        android:id="@+id/engibox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="10dp"
                        android:antialias="true"
                        android:src="@drawable/engiicon" />

                    <TextView
                        android:id="@+id/engiText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="ngineering"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/whartonbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="10dp"
                        android:antialias="true"
                        android:src="@drawable/whartonicon" />

                    <TextView
                        android:id="@+id/whartonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="harton"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/libbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="10dp"
                        android:antialias="true"
                        android:src="@drawable/libicon" />

                    <TextView
                        android:id="@+id/libText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="ibrary"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/otherbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="10dp"
                        android:antialias="true"
                        android:src="@drawable/othericon" />

                    <TextView
                        android:id="@+id/otherText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="thers"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="10dp"
                        android:antialias="true"
                        android:src="@drawable/allicon" />

                    <TextView
                        android:id="@+id/allText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:onClick="allCheck"
                        android:text="ll"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/searchButton"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="onSearchButtonClick"
                android:text="Search" />

            <Button
                android:id="@+id/findNowButton"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/searchButton"
                android:onClick="onFindNowButtonClick"
                android:text="Find Now!" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>